<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">En Garde</string>
    <string name="current_version">0.4.0 RC1</string>

    <string name="activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_undo">Undo</string>
    <string name="action_skip_section">Skip</string>

    <string name="timer_default">3:00.00</string>

    <string name="fencer_one_score">0</string>
    <string name="fencer_two_score">0</string>
    <string name="double_touch">Double</string>

    <string name="winner">WINNER</string>
    <string name="period">Period</string>
    <string name="rest">Break</string>
    <string name="priority">Priority</string>

    <string name="penalty_card">Penalty card</string>
    <string name="yellow_card">Yellow card</string>
    <string name="red_card">Red card</string>

    <string name="yellow_card_dialog">Give yellow card to &#8230;</string>
    <string name="red_card_dialog">Give red card to &#8230;</string>

    <string name="toast_gave">Gave</string>
    <string name="toast_skipped">Skipped</string>
    <string name="toast_undid">Undid</string>
    <string name="toast_unable">Can\'t</string>
    <string name="toast_give">give</string>
    <string name="toast_skip">skip</string>
    <string name="toast_touch">touch</string>
    <string name="toast_card">card</string>
    <string name="toast_period">period</string>
    <string name="toast_break">break</string>
    <string name="toast_yellow">yellow</string>
    <string name="toast_red">red</string>
    <string name="toast_left">to left fencer</string>
    <string name="toast_right">to right fencer</string>
    <string name="toast_double">double</string>
    <string name="toast_priority">priority</string>
    <string name="toast_winner_determined">--a winner has already been determined.</string>

    <string name="pref_behavior">Behavior</string>
    <string name="pref_mode">Bout mode</string>
    <string name="pref_choose_mode">Choose a mode</string>
    <string name="pref_mode_summary">Choose the bout length</string>
    <string name="pref_mode_5touch">Five touches (one period)</string>
    <string name="pref_mode_15touch">Fifteen touches  (three periods)</string>
    <string name="pref_anywhere_to_start">Anywhere to start</string>
    <string name="pref_anywhere_description">Touch on empty space to start the timer</string>

    <string name="pref_show_double">Show double touch button</string>

    <string name="pref_looks">Looks</string>
    <string name="pref_black">True black mode</string>
    <string name="pref_black_summary">Make app use black rather than grey to save battery on devices with AMOLED screens</string>

    <string name="pref_about">About</string>
    <string name="pref_version">Version</string>

    <string name="priority_left">Priority to the left</string>
    <string name="priority_right">Priority to the right</string>
    <string name="penalty_left">Penalty to the left</string>
    <string name="penalty_right">Penalty to the right</string>

    <string name="dialog_reset_title">Reset bout?</string>
    <string name="dialog_reset_message">You have changed the bout mode. Would you like to reset the bout? Clicking "RESET" will reset the time, scores, and penalties.\n\nWarning: this action is irreversible!</string>
    <string name="dialog_reset_positive">Reset</string>
    <string name="dialog_reset_negative">Leave it</string>
</resources>