<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyActivity">
    <item
        android:id="@+id/action_settings"
        android:onClick="openSettings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_reset"
        android:onClick="resetAll"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_reset" />
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:onClick="undoMostRecent"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:title="@string/action_undo" />
    <item
        android:id="@+id/action_skip_section"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/action_skip_section"
        android:onClick="skipSection" />
</menu>