<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <RelativeLayout
        android:id="@+id/cardLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:longClickable="true">

        <!--Yellow Card Button-->
        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/yellowCardButton"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:onClick="showCardDialog"
            android:paddingLeft="10dp"
            flatui:blockButtonEffectHeight="3dp"
            flatui:theme="@array/flat_yellow" />

        <!--Red Card Button-->
        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/redCardButton"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:onClick="showCardDialog"
            flatui:blockButtonEffectHeight="3dp"
            flatui:theme="@array/flat_red" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp">

        <!--Fencer One Score-->
        <TextView
            android:id="@+id/scoreOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@+id/doubleTouchButton"
            android:layout_toStartOf="@+id/doubleTouchButton"
            android:clickable="true"
            android:freezesText="true"
            android:gravity="center"
            android:longClickable="true"
            android:onClick="addScore"
            android:padding="20dp"
            android:text="@string/fencer_one_score"
            android:textColor="#FF0000"
            android:textSize="60sp" />

        <!--Fencer Two Score-->
        <TextView
            android:id="@+id/scoreTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_toEndOf="@+id/doubleTouchButton"
            android:layout_toRightOf="@+id/doubleTouchButton"
            android:clickable="true"
            android:freezesText="true"
            android:gravity="center"
            android:longClickable="true"
            android:onClick="addScore"
            android:padding="20dp"
            android:text="@string/fencer_two_score"
            android:textColor="#00FF00"
            android:textSize="60sp" />

        <!--Double Touch Button-->
        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/doubleTouchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="addScore"
            android:text="@string/double_touch"
            flatui:theme="@array/dark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/timerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <!--Timer-->
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onClickTimer"
            android:padding="20dp"
            android:text="@string/timer_default"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:typeface="sans" />

        <!--Period Indicator-->
        <TextView
            android:id="@+id/periodView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/timer"
            android:layout_centerHorizontal="true"
            android:autoText="false"
            android:text="@string/period"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <!--Penalty Indicators-->
    <RelativeLayout
        android:id="@+id/penaltyLayoutLeft"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scoreLayout"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="26dp">

        <ImageView
            android:id="@+id/yellowCircleViewOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/yellow_circle" />

        <ImageView
            android:id="@+id/redCircleViewOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/red_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/penaltyLayoutRight"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/penaltyLayoutLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginRight="26dp">

        <ImageView
            android:id="@+id/yellowCircleViewTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/yellow_circle" />

        <ImageView
            android:id="@+id/redCircleViewTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/red_circle" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/priorityCircleViewLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/penaltyLayoutLeft"
        android:layout_alignStart="@+id/penaltyLayoutLeft"
        android:layout_below="@+id/scoreLayout"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/priority_circle" />

    <ImageView
        android:id="@+id/priorityCircleViewRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/penaltyLayoutRight"
        android:layout_alignStart="@+id/penaltyLayoutRight"
        android:layout_below="@+id/scoreLayout"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/priority_circle" />

</RelativeLayout>
